# leget

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check_and_lint.yaml  rust.yml
outputs/: temp.txt
src/: command.rs  lib.rs  main.rs  query.rs  scraper_utils.rs  set_data.rs
